<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbars="vertical"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<TextView-->
        <!--style="@style/App_Name"-->
        <!--android:text="@string/change_code"/>-->
    <TextView
        android:id="@+id/txtError"
        android:layout_above="@+id/edOldCode_ChangeCode"
        android:textColor="@color/error"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edOldCode_ChangeCode"
        android:hint="@string/old_code"
        android:singleLine="true"
        style="@style/EditText_Box"/>

    <EditText
        android:id="@+id/edNewCode_ChangeCode"
        android:hint="@string/new_code"
        android:singleLine="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        style="@style/EditText_Box"/>

    <EditText
        android:id="@+id/edConfirmCode_ChangeCode"
        android:hint="@string/confirm_code"
        android:singleLine="true"
        android:layout_marginBottom="20dp"
        style="@style/EditText_Box"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel_ChangeCode"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"></View>
        <Button
            android:id="@+id/btnDone_ChangeCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
