<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PhoneFinder">

    <TextView
        android:id="@+id/txtCaution_EnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/error"/>

    <EditText
        android:id="@+id/edCode_EnterCode"
        style="@style/EditText_Box"
        android:hint="@string/enter_code"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/edConfirmCode_EnterCode"
        style="@style/EditText_Box"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_code"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btnSave_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>
